crates/strider/tests/snapshots/v2__arm__memory__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x5e4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x5c8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x598:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v18" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v18" [color="#888888", style=dashed];
  "v18" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "14" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "14" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x608:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v24" [color="#888888", style=dashed];
  "v24" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v25" [color="#888888", style=dashed];
  "v25" -> "20" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "27" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "20" -> "27" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x614:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "27" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "31" -> "27" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v32" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v32" [color="#888888", style=dashed];
  "v32" -> "27" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "34" -> "27" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "27" -> "35" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x620:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "35" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "35" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "35" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "40" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "35" -> "40" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x628:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" -> "40" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "35" -> "v44" [color="#888888", style=dashed];
  "v44" -> "40" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v46" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "35" -> "v46" [color="#888888", style=dashed];
  "v46" -> "40" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "47" -> "40" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "40" -> "48" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "40" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "40" -> "v50" [color="#888888", style=dashed];
  "v50" -> "48" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "40" -> "v51" [color="#888888", style=dashed];
  "v51" -> "48" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "40" -> "v52" [color="#888888", style=dashed];
  "v52" -> "48" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v53" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "40" -> "v53" [color="#888888", style=dashed];
  "v53" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "40" -> "v54" [color="#888888", style=dashed];
  "v54" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1ffffffcc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "35" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v59" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v59" [color="#888888", style=dashed];
  "v59" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v60" [color="#888888", style=dashed];
  "v60" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1ffffffd0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v32" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v62" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v62" [color="#888888", style=dashed];
  "v62" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "63" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "20" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1ffffffc4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1ffffffc8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "70" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 60]", shape=box3d, fillcolor="#20182a"];
  "14" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x1ffffffbc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x1ffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 68]", shape=box3d, fillcolor="#20182a"];
  "78" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "80" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "83" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "83" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "88" -> "83" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "89" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v90" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v90" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "91" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "89" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "92" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v93" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v93" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "94" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "94" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "92" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "95" -> "92" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v96" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v96" -> "92" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "97" -> "92" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "97" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "95" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
